fix scrollbar jump

--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -1,3 +1,7 @@
+html {
+  margin-left: calc(100vw - 100%);
+}
+
 body {
   margin: 0;
   background-image: url(../images/paper_bg.png);
